--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -2,6 +2,7 @@
 @import "./card.css";
 @import "./header.css";
 @import "./circle.css";
+@import "./content.css";
 @import "./btn.css";
 @import "./text.css";
 @import "./footer.css";
