--- a/stylesheet/btn.css
+++ b/stylesheet/btn.css
@@ -1,11 +1,6 @@
 .btn-gradient {
-  color: white;
-  background: rgb(107, 39, 240);
-  background: linear-gradient(
-    243deg,
-    rgba(107, 39, 240, 1) 0%,
-    rgba(50, 181, 255, 1) 100%
-  );
+  color: var(--color-secondary);
+  background: rgb(209,170,148);
   border-radius: 35px;
   border: unset;
   display: flex;
@@ -16,13 +11,8 @@
 }
 
 .btn-gradient:hover {
-  background: rgb(107, 39, 240);
-  background: linear-gradient(
-    -243deg,
-    rgba(107, 39, 240, 1) 0%,
-    rgba(50, 181, 255, 1) 100%
-  );
+  background: rgb(209,170,148);
   transition: all 450ms ease;
-  color: white;
+  color: var(--color-secondary);
   text-decoration: unset;
 }
