--- a/stylesheet/footer.css
+++ b/stylesheet/footer.css
@@ -1,6 +1,13 @@
 #footer {
-  background-image: url("../image/home/circle.svg");
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: linear-gradient(85deg, rgba(184,198,207,1) 0%, rgba(240,221,194,1) 100%);
+}
+
+.footer__content {
+  padding: 2rem 0;
+}
+
+.footer__title {
+  color: var(--color-secondary);
+  font-size: 20px;
+  margin-bottom: 1rem;
 }
