--- a/stylesheet/default.css
+++ b/stylesheet/default.css
@@ -20,14 +20,17 @@ h1 , .h1 {
   position: relative;
   font-size: 2.5rem!important;
   margin-bottom: 1.25rem!important;
+  font-weight: 400!important;
 }
 
 h3 , .h3 {
   font-size: 1.25rem!important;
+  font-weight: 400!important;
 }
 
 h2 , .h2 {
   font-size: 1.5rem!important;
+  font-weight: 400!important;
 }
 
 .title {
