--- a/layout/footer.html
+++ b/layout/footer.html
@@ -12,3 +12,19 @@
     </div>
   </div>
 </div>
+
+<div class="footer__content">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="footer__title">
+          เบอร์ติดต่อ อุ้ม
+        </div>
+        <a href="tel:0955784302" class="btn btn-gradient" target="_blank">
+          โทรด่วน <i class="fas fa-phone-alt"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
