--- a/stylesheet/btn.css
+++ b/stylesheet/btn.css
@@ -1,18 +1,24 @@
 .btn-gradient {
   color: var(--color-secondary);
-  background: rgb(209,170,148);
+  background: var(--color-third);
   border-radius: 35px;
   border: unset;
   display: flex;
-  padding: 0.5rem 2rem;
+  padding: 0.375rem 1.8rem!important;
   display: flex;
+  border-radius: 25px!important;
   align-items: center;
   transition: all 450ms ease;
 }
 
 .btn-gradient:hover {
-  background: rgb(209,170,148);
+  background: var(--color-third)!important;
   transition: all 450ms ease;
   color: var(--color-secondary);
   text-decoration: unset;
+}
+
+
+.btn i {
+  margin: 0 0rem 0 0.5rem;
 }
