--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -53,7 +53,25 @@
 .content__box {
     padding: 1rem;
     position: relative;
-    margin: 0 0 2rem;
+    margin: 0 0 1rem;
+}
+.content__highlight {
+    position: relative;
+    background-color: var(--color-primary);
+    padding: 1rem;
+    color: black;
+    margin: 2rem 0;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 18px;
+    font-style: italic;
+}
+
+.content__highlight i {
+    position: absolute;
+    left: 1rem;
+    top: -9px;
+    font-size: 22px;
 }
 
 .content__box .content__wrapper {
@@ -87,6 +105,13 @@
     font-size: 18px;
     margin-bottom: 1rem;
     position: relative;
+    font-weight: 600;
+}
+
+.content__location {
+    font-size: 18px;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
 }
 
 .content__time::before {
@@ -108,14 +133,39 @@
     margin-bottom: 1rem;
 }
 
+.content__qr-code {
+    margin-bottom: 1rem;
+}
+
+.content__qr-code img {
+    border: 2px dashed var(--color-five);
+    padding: 0.25rem;
+}
+
 @media (max-width: 768px) {
     .content__banner {
         position: relative;
-        min-height: 100vh;
+        min-height: 0;
         border-bottom-left-radius: 0%;
         border-bottom-right-radius: 0%;
         overflow: hidden;
         margin-bottom: 2rem;
+    }
+
+    .content__content {
+        padding: 10rem 0 7rem;
+        text-align: center;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        z-index: 1;
+    }
+
+    .content__box .content__title {
+        font-size: 21px;
     }
 
     .content__cover {
@@ -125,9 +175,8 @@
         height: 100%;
         object-fit: cover;
         position: absolute;
-        left: -40%;
+        left: -50%;
         top: 0;
-      
       }
       
 }
