--- a/stylesheet/footer.css
+++ b/stylesheet/footer.css
@@ -1,9 +1,22 @@
 #footer {
   background: linear-gradient(85deg, rgba(184,198,207,1) 0%, rgba(240,221,194,1) 100%);
+  position: relative;
+  margin: 2rem 0 0;
+}
+
+#footer:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 5rem;
+  top: -20%;
+  left: 0;
+  clip-path: ellipse(65% 50% at 46% 90%);
+  background: linear-gradient(85deg, rgba(184,198,207,1) 0%, rgba(240,221,194,1) 100%);
 }
 
 .footer__content {
-  padding: 2rem 0;
+  padding: 1.5rem 1rem;
 }
 
 .footer__title {
