--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -40,6 +40,7 @@
 }
 
 .content__date {
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
     color: var(--color-secondary);
     border-radius: 15px;
     padding: 0.25rem 1.25rem;
@@ -86,10 +87,11 @@
     top: 2.25rem;
     width: 1px;
     height: 100%;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.2);
 }
 
 .content__box  .content__title {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     left: -2.2rem;
     position: relative;
     color: var(--color-secondary);
@@ -108,20 +110,21 @@
     font-weight: 600;
 }
 
-.content__location {
-    font-size: 18px;
-    margin-bottom: 0.5rem;
-    font-weight: 500;
-}
 
 .content__time::before {
     content: '';
     position: absolute;
     width: 0.5rem;
     height: 1px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.2);
     left: -1rem;
     top: 0.85rem;
+}
+
+.content__location {
+    font-size: 18px;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
 }
 
 .content__body {
@@ -140,6 +143,65 @@
 .content__qr-code img {
     border: 2px dashed var(--color-five);
     padding: 0.25rem;
+}
+
+.content__gallery {
+    position: relative;
+    margin-bottom: 2rem;
+}
+
+.content__gallery .content__theme{
+    position: relative;
+    padding: 1rem 0 5rem;
+    margin: 4rem 0rem 0;
+}
+
+.content__gallery .content__theme::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4rem;
+    clip-path: ellipse(65% 50% at 46% 90%);
+    left: 0;
+    top: -3rem;
+}
+
+
+.content__gallery .content__theme.content__theme--1{
+    background-color: var(--color-six); 
+}
+
+.content__gallery .content__theme.content__theme--1::before {
+    background-color: var(--color-six);
+}
+
+.content__gallery .content__theme.content__theme--2{
+    background-color:var(--color-seven);
+    margin-top: -1rem;
+}
+
+.content__gallery .content__theme.content__theme--2::before{
+    background-color: var(--color-seven);
+}
+
+.content__gallery .content__theme.content__theme--3{
+    background-color:var(--color-fouth);
+    margin-top: -1rem;
+    padding-bottom: 3rem;
+}
+
+.content__gallery .content__theme.content__theme--3::before{
+    background-color: var(--color-fouth);
+}
+
+
+
+
+.content__gallery .content__title {
+    font-family: hurricane;
+    font-size: 3rem;
+    text-align: center;
+    margin-bottom: 1.5rem;
 }
 
 @media (max-width: 768px) {
