--- a/stylesheet/default.css
+++ b/stylesheet/default.css
@@ -4,6 +4,8 @@
   --color-third: #D1AA94;
   --color-fouth: #F0DDC2;
   --color-five: #B8C6CF;
+  --color-six: #FDF5EF;
+  --color-seven: #C8CCCE;
 }
 
 * {
@@ -48,7 +50,7 @@ h2 , .h2 {
     border-radius: 15px;
     position: absolute;
     width: 3rem;
-    height: 0.25rem;
+    height: 0.2rem;
     background-color: var(--color-third);
 }
 
