--- a/layout/footer.html
+++ b/layout/footer.html
@@ -6,7 +6,7 @@
           เบอร์ติดต่อ ก๊อต
         </div>
         <a href="tel:0856154149" class="btn btn-gradient" target="_blank">
-          โทรด่วน <i class="fas fa-phone-alt"></i>
+          โทรด่วน  <img class="btn__image" src="image/flower/flower-6.png" alt="">
         </a>
       </div>
     </div>
@@ -21,7 +21,7 @@
           เบอร์ติดต่อ อุ้ม
         </div>
         <a href="tel:0955784302" class="btn btn-gradient" target="_blank">
-          โทรด่วน <i class="fas fa-phone-alt"></i>
+          โทรด่วน  <img class="btn__image" src="image/flower/flower-6.png" alt="">
         </a>
       </div>
     </div>
