--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,7 +1,7 @@
 <div class="footer__content">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-12 col-lg-5">
+      <div class="col-6">
         <div class="footer__title">
           เบอร์ติดต่อ ก๊อต
         </div>
@@ -16,7 +16,7 @@
 <div class="footer__content">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-12 col-lg-5">
+      <div class="col-6">
         <div class="footer__title">
           เบอร์ติดต่อ อุ้ม
         </div>
