--- a/layout/footer.html
+++ b/layout/footer.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="footer__content">
+<div class="footer__content pt-0">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-6">
@@ -28,3 +28,14 @@
   </div>
 </div>
 
+<div class="footer__copyright">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <p class="mb-0">
+          &copy; Copyright 2023 Dulyapat Rungruangrayabkul
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
