--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -271,12 +271,12 @@ img.content__icon {
 
 .content__gallery .content__title {
     font-family: hurricane;
-    font-size: 3rem;
+    font-size: 5rem;
     text-align: center;
     margin-bottom: 1.5rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width:1024px) {
     .content__banner {
         position: relative;
         min-height: 0;
@@ -284,6 +284,13 @@ img.content__icon {
         border-bottom-right-radius: 0%;
         overflow: hidden;
         margin-bottom: 2rem;
+    }
+
+    .content__gallery .content__title {
+        font-family: hurricane;
+        font-size: 3rem;
+        text-align: center;
+        margin-bottom: 1.5rem;
     }
 
     .content__content {
